# pytest-review

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
examples/: bad_tests.py
src/pytest_review/: __init__.py  config.py  plugin.py  scoring.py
src/pytest_review/analyzers/: __init__.py  assertions.py  base.py  complexity.py  isolation.py  naming.py  patterns.py  performance.py  smells.py
src/pytest_review/collectors/: __init__.py  dynamic.py
src/pytest_review/reporters/: __init__.py  html.py  json.py  terminal.py
tests/: __init__.py  conftest.py  test_analyzers_base.py  test_assertions_analyzer.py  test_complexity_analyzer.py  test_config.py  test_isolation_analyzer.py  test_naming_analyzer.py  test_patterns_analyzer.py  test_performance_analyzer.py  test_plugin.py  test_reporters.py  test_scoring.py  test_smells_analyzer.py
